--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,37 @@
 body {
   margin: 0;
-  padding: 0;
+  padding: 10px;
   font-family: sans-serif;
+}
+
+.circle {
+  height: 100px;
+  width: 100px;
+  background-color: #bbbbbb;
+  border-radius: 50%;
+  margin-top: 10px
+}
+
+.redText{
+  color: #ff0000;
+}
+
+.blueText {
+  color: #0008b0;
+}
+
+.circleRed {
+  height: 100px;
+  width: 100px;
+  background-color: #ff0000 ;
+  border-radius: 50%;
+  margin-top: 10px
+}
+
+.circleBlue {
+  height: 100px;
+  width: 100px;
+  background-color: #0008b0;
+  border-radius: 50%;
+  margin-top: 10px
 }
